--- a/package.json
+++ b/package.json
@@ -1,5 +1,5 @@
 {
-  "name": "mobx-2022",
+  "name": "mobx-blockchain",
   "version": "0.1.0",
   "private": true,
   "scripts": {
@@ -8,8 +8,16 @@
     "start": "next start"
   },
   "dependencies": {
+    "crypto-js": "^4.0.0",
+    "mobx": "^6.1.8",
+    "mobx-react-lite": "^3.2.0",
     "next": "10.0.8",
     "react": "17.0.1",
     "react-dom": "17.0.1"
+  },
+  "devDependencies": {
+    "@types/node": "^14.14.34",
+    "@types/react": "^17.0.3",
+    "typescript": "^4.2.3"
   }
 }
