--- a/package.json
+++ b/package.json
@@ -16,8 +16,9 @@
     "react-dom": "17.0.1"
   },
   "devDependencies": {
-    "@types/node": "^14.14.34",
-    "@types/react": "^17.0.3",
-    "typescript": "^4.2.3"
+    "@types/crypto-js": "^4.0.1",
+    "@types/node": "^14.14.31",
+    "@types/react": "^17.0.2",
+    "typescript": "^4.1.5"
   }
 }
